--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 <body>
   <div id='root'>
   </div>
-<script type="text/javascript" src="bundle.a3f65da727ebb0e82ce4.js"></script></body>
+<script type="text/javascript" src="manifest.2c9621a6.js"></script><script type="text/javascript" src="vendor.c0d50c2e.js"></script><script type="text/javascript" src="bundle.f7f90bd6.js"></script></body>
 </html>
